Fixed Layout Issue and Changes to Sidebar, Navbar

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    @apply m-0;
+}
+
+* {
+    box-sizing: border-box;
+}
